--- a/deb-content/TinyTotp.desktop
+++ b/deb-content/TinyTotp.desktop
@@ -4,6 +4,6 @@
 Type=Application
 Terminal=false
 Exec=java -jar /usr/share/TinyTotp/TinyTotp.jar
-Icon=/usr/share/TinyTotp/icon.png
+Icon=/usr/share/TinyTotp/icon.svg
 Name=Tiny Totp
 GenericName=Tiny Totp
