--- a/.classpath
+++ b/.classpath
@@ -14,13 +14,14 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-18">
 		<attributes>
 			<attribute name="module" value="true"/>
-			<attribute name="add-opens" value="java.desktop/sun.awt.X11=de.tinycodecrank.ReflectionUtils"/>
+			<attribute name="add-opens" value="java.desktop/sun.awt.X11=kryptonbutterfly.ReflectionUtils"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
