--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>kryptonbutterfly</groupId>
 	<artifactId>tiny_totp</artifactId>
-	<version>3.0.0</version>
+	<version>3.1.0</version>
 	<name>TinyTOTP</name>
 	<description>A TOTP client</description>
 
@@ -19,57 +21,81 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>18</java.version>
 	</properties>
-	
+
 	<repositories>
 		<repository>
 			<id>github</id>
 			<url>https://maven.pkg.github.com/kryptonbutterfly/maven-repo</url>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
+		<!-- https://central.sonatype.com/artifact/com.github.sarxos/webcam-capture/0.3.12 -->
+		<dependency>
+			<groupId>com.github.sarxos</groupId>
+			<artifactId>webcam-capture</artifactId>
+			<version>0.3.12</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 		<dependency>
-		    <groupId>commons-codec</groupId>
-		    <artifactId>commons-codec</artifactId>
-		    <version>1.16.0</version>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.16.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
-		    <groupId>com.google.code.gson</groupId>
-		    <artifactId>gson</artifactId>
-		    <version>2.10.1</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
 		<dependency>
-			<groupId>kryptonbutterfly</groupId>
-			<artifactId>reflection_utils</artifactId>
-			<version>2.0.0</version>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
 		<dependency>
-			<groupId>kryptonbutterfly</groupId>
-			<artifactId>tiny_system_utils</artifactId>
-			<version>2.0.0</version>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.2</version>
 		</dependency>
-		<dependency>
-			<groupId>kryptonbutterfly</groupId>
-			<artifactId>tiny_cache</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>kryptonbutterfly</groupId>
-			<artifactId>tiny_swing_utils</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>kryptonbutterfly</groupId>
-			<artifactId>linear_algebra</artifactId>
-			<version>2.0.0</version>
-		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
 			<scope>provided</scope>
+		</dependency>
+		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044827 -->
+		<dependency>
+			<groupId>kryptonbutterfly</groupId>
+			<artifactId>reflection_utils</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044864 -->
+		<dependency>
+			<groupId>kryptonbutterfly</groupId>
+			<artifactId>tiny_system_utils</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044859 -->
+		<dependency>
+			<groupId>kryptonbutterfly</groupId>
+			<artifactId>tiny_cache</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044845 -->
+		<dependency>
+			<groupId>kryptonbutterfly</groupId>
+			<artifactId>tiny_swing_utils</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044808 -->
+		<dependency>
+			<groupId>kryptonbutterfly</groupId>
+			<artifactId>linear_algebra</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 
