--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>kryptonbutterfly</groupId>
 	<artifactId>tiny_totp</artifactId>
-	<version>4.2.0</version>
+	<version>4.3.0</version>
 	<name>TinyTOTP</name>
 	<description>A TOTP client</description>
 
@@ -60,6 +60,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
 			<scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
+		<dependency>
+		    <groupId>commons-net</groupId>
+		    <artifactId>commons-net</artifactId>
+		    <version>3.11.1</version>
 		</dependency>
 		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044827 -->
 		<dependency>
